--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,3 +2,10 @@
     height: 50vh;
     width: 100%;
 }
+.form-color {
+    background-color: #F5F5F5;
+}
+.contact-img{
+    height: 89vh;
+    width: 100%;
+}
